5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1758_1583.log
== TEST (2019-05-28 18:57:24) 
-- CODE:
from nupmy import *
s = input("String: ")

d = s[0:3]
c = s[3:6]
a = s[6: ]

print(d,".",c,".",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from nupmy import *
ModuleNotFoundError: No module named 'nupmy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:57:34) 
-- CODE:
from numpy import *
s = input("String: ")

d = s[0:3]
c = s[3:6]
a = s[6: ]

print(d,".",c,".",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 18:58:00) 
-- CODE:
from numpy import *
s = input("String: ")

d = s[0:3]
c = s[3:6]
a = s[6: ]

print(d,".",c,".",a)
-- EXECUTION TIME:
0.371916
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123 .  .
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123 . 456 . 789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987 . 654 . 321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:58:03) 
-- CODE:
from numpy import *
s = input("String: ")

d = s[0:3]
c = s[3:6]
a = s[6: ]

print(d,".",c,".",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:00:29) 
-- CODE:
from numpy import *
s = input("String: ")

i = 0
while(size(s)>=3 or size(s)/3 % 0):
	d = s[0:3]
	c = s[3:6]
	a = s[6: ]
i = i + 1

print(d,".",c,".",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:01:06) 
-- CODE:
from numpy import *
s = input("String: ")

i = 0
while(size(s)>=3 or size(s)%3 == 0):
	d = s[0:3]
	c = s[3:6]
	a = s[6: ]
i = i + 1

print(d,".",c,".",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:01:25) 
-- CODE:
from numpy import *
s = input("String: ")

i = 0
while(size(s)>=3 or size(s)%3 == 0):
d = s[0:3]
c = s[3:6]
a = s[6: ]
i = i + 1

print(d,".",c,".",a)
-- ERROR:
File "XXXX", line 6
    d = s[0:3]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:02:33) 
-- CODE:
from numpy import *
s = input("String: ")

i = 0


while(size(s)>=3 or size(s)%3 == 0):
d = s[0:3]
c = s[3:6]
a = s[6: ]
i = i + 1

print(d,".",c,".",a)
-- ERROR:
File "XXXX", line 8
    d = s[0:3]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:02:59) 
-- CODE:
from numpy import *
s = input("String: ")

i = 0
d = 0
a = 0
c = 0
while(size(s)>=3 or size(s)%3 == 0):
	d = s[0:3]
	c = s[3:6]
	a = s[6: ]
i = i + 1

print(d,".",c,".",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:04:10) 
-- CODE:
from numpy import *
s = input("String: ")

i = 0

d = s[0:3]
c = s[3:6]
a = s[6: ]
i = i + 1

print(d,".",c,".",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:04:20) 
-- CODE:
from numpy import *
s = input("String: ")

i = 0

d = s[0:3]
c = s[3:6]
a = s[6: ]
i = i + 1

print(d,".",c,".",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:04:35) 
-- CODE:
from numpy import *
s = input("String: ")

i = 0

d = s[0:3]
c = s[3:6]
a = s[6: ]
i = i + 1

print(d,".",c,".",a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:09:04) 
-- CODE:
from numpy import *
s = input("String: ")

i = 0
k = 3
msg = ""

while(i<len(s)):
	if(i==(len(s)-3)):
		msg = msg + s[i:k]
		i = i+3
		k=k+3
	else:
		msg=msg+s[i:k]+ "."
		i = i + 3
		k = k + 3
print(msg)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:09:14) 
-- CODE:
from numpy import *
s = input("String: ")

i = 0
k = 3
msg = ""

while(i<len(s)):
	if(i==(len(s)-3)):
		msg = msg + s[i:k]
		i = i+3
		k=k+3
	else:
		msg=msg+s[i:k]+ "."
		i = i + 3
		k = k + 3
print(msg)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 19:09:25) 
-- CODE:
from numpy import *
s = input("String: ")

i = 0
k = 3
msg = ""

while(i<len(s)):
	if(i==(len(s)-3)):
		msg = msg + s[i:k]
		i = i+3
		k=k+3
	else:
		msg=msg+s[i:k]+ "."
		i = i + 3
		k = k + 3
print(msg)
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 19:09:40) 
-- CODE:
from numpy import *
s = input("String: ")

i = 0
k = 3
msg = ""

while(i<len(s)):
	if(i==(len(s)-3)):
		msg = msg + s[i:k]
		i = i+3
		k=k+3
	else:
		msg=msg+s[i:k]+ "."
		i = i + 3
		k = k + 3
print(msg)
		
		
		
-- EXECUTION TIME:
0.516073
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
